# mc_tunnel

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml  config.toml  index.html
dashboard/: index.html
public/: Cargo.toml  README_DASHBOARD.md  config.example.toml  main.rs
src/: App.tsx  main.rs  types.ts
src/components/: ConnectionsTable.tsx  StatCard.tsx  StatusBadge.tsx  TrafficChart.tsx
src/hooks/: useStats.ts
src/utils/: format.ts
